# phoenix-sdr-core

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
cmake/: FindSDRplayAPI.cmake  version.h.in
docs/: TCP_PROTOCOL.md
src/: tcp_commands.c
src/stubs/: sdrplay_api_stub.c
